<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <artifactId>ing-open-banking-java-sdk</artifactId>
    <version>0.0.3-SNAPSHOT</version>
    <name>Open Banking Java SDK</name>
    <description>Open Banking Java SDK and demo App for developers</description>

    <parent>
        <groupId>com.ing.developer</groupId>
        <artifactId>ing-open-banking-sdk</artifactId>
        <version>0.0.3-SNAPSHOT</version>
    </parent>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>ing-bank</name>
            <url>https://maven.pkg.github.com/ing-bank/ing-open-banking-sdk</url>
        </repository>
    </distributionManagement>

    <properties>
        <java.version>17</java.version>
        <open-banking-sdk.version>0.0.3-SNAPSHOT</open-banking-sdk.version>

        <apache-httpclient.version>4.5.13</apache-httpclient.version>
        <jersey.version>2.36</jersey.version>

        <jackson.version>2.13.3</jackson.version>
        <jsr305.version>3.0.2</jsr305.version>
        <jackson-databind-nullable.version>0.2.2</jackson-databind-nullable.version>
        <tomitribe-http-signatures.version>1.8</tomitribe-http-signatures.version>

        <junit.version>5.7.1</junit.version>

        <swagger-annotations.version>1.6.2</swagger-annotations.version>
        <scribejava-apis.version>8.3.1</scribejava-apis.version>
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
    </properties>

    <modules>
        <module>oauth-driver</module>
        <module>open-banking-drivers</module>
        <module>open-banking-common</module>
        <module>open-banking-demo-app</module>
        <module>open-banking-simple-app</module>
    </modules>

</project>
